--- a/public/Index.html
+++ b/public/Index.html
@@ -13,7 +13,7 @@
         <div class="bg-red-500 p-4 h-2/3 mt-3">
         <h1 class="text-white text-2xl font-bold">Rojo</h1>
             <p class="text-white">Hola</p>                   
-                    
+                    <p>Adios github</p>
                 </div>
             </div>
         </div>
